Optimize glyph of Latin Upper Lambda with Stroke.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6165,7 +6165,6 @@ descriptionAffix = "straight shape"
 selectorAffix."grek/Lambda" = "straight"
 selectorAffix."grek/Lambda/sansSerif" = "straight"
 selectorAffix."cyrl/Yus" = "straight"
-selectorAffix."Y/LambdaBase" = "straight"
 
 [prime.capital-lambda.variants-buildup.stages.body.curly]
 rank = 2
@@ -6173,7 +6172,6 @@ descriptionAffix = "curly shape"
 selectorAffix."grek/Lambda" = "curly"
 selectorAffix."grek/Lambda/sansSerif" = "curly"
 selectorAffix."cyrl/Yus" = "curly"
-selectorAffix."Y/LambdaBase" = "curly"
 
 [prime.capital-lambda.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -6182,7 +6180,6 @@ descriptionJoiner = "without"
 selectorAffix."grek/Lambda" = "serifless"
 selectorAffix."grek/Lambda/sansSerif" = "serifless"
 selectorAffix."cyrl/Yus" = ""
-selectorAffix."Y/LambdaBase" = "serifless"
 
 [prime.capital-lambda.variants-buildup.stages.serifs.top-serifed]
 rank = 2
@@ -6190,7 +6187,6 @@ descriptionAffix = "serifs at top"
 selectorAffix."grek/Lambda" = "topSerifed"
 selectorAffix."grek/Lambda/sansSerif" = "serifless"
 selectorAffix."cyrl/Yus" = ""
-selectorAffix."Y/LambdaBase" = "baseSerifed"
 
 [prime.capital-lambda.variants-buildup.stages.serifs.base-serifed]
 rank = 3
@@ -6198,7 +6194,6 @@ descriptionAffix = "serifs at base"
 selectorAffix."grek/Lambda" = "baseSerifed"
 selectorAffix."grek/Lambda/sansSerif" = "serifless"
 selectorAffix."cyrl/Yus" = ""
-selectorAffix."Y/LambdaBase" = "serifed"
 
 [prime.capital-lambda.variants-buildup.stages.serifs.tri-serifed]
 rank = 4
@@ -6206,7 +6201,6 @@ descriptionAffix = "serifs at both top and base"
 selectorAffix."grek/Lambda" = "triSerifed"
 selectorAffix."grek/Lambda/sansSerif" = "serifless"
 selectorAffix."cyrl/Yus" = ""
-selectorAffix."Y/LambdaBase" = "serifed"
 
 
 
@@ -9454,6 +9448,7 @@ i = "hooky"
 j = "serifed"
 k = "straight-serifless"
 l = "zshaped"
+r = "serifless"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
 v = "straight-serifless"
@@ -9685,6 +9680,7 @@ j = "serifed"
 k = "symmetric-touching-serifless"
 l = "serifed"
 q = "top-cut-straight-serifless"
+r = "serifless"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
 v = "straight-serifless"
@@ -9763,6 +9759,7 @@ d = "toothed-serifed"
 f = "flat-hook-serifed"
 k = "symmetric-touching-serifed"
 q = "top-cut-straight-serifed"
+r = "serifed"
 u = "toothed-serifed"
 v = "straight-serifed"
 w = "straight-serifed"
@@ -9791,6 +9788,7 @@ a = "single-storey-top-cut-serifed"
 f = "flat-hook-tailed"
 k = "cursive-top-left-and-bottom-right-serifed"
 l = "tailed-serifed"
+r = "top-serifed"
 u = "toothed-motion-serifed"
 v = "straight-motion-serifed"
 w = "straight-motion-serifed"
@@ -9829,6 +9827,7 @@ i = "serifed"
 j = "flat-hook-serifed"
 k = "straight-serifless"
 l = "serifed-flat-tailed"
+r = "serifless"
 t = "flat-hook-short-neck"
 u = "toothed-serifless"
 v = "straight-serifless"
@@ -10281,6 +10280,7 @@ i = "serifed"
 j = "serifed"
 k = "curly-serifless"
 l = "zshaped"
+r = "serifless"
 t = "bent-hook"
 u = "toothed-serifless"
 v = "curly-serifless"
@@ -10360,6 +10360,7 @@ a = "double-storey-serifed"
 d = "toothed-serifed"
 f = "serifed"
 k = "curly-serifed"
+r = "serifed"
 u = "toothed-serifed"
 v = "curly-serifed"
 w = "curly-serifed"
@@ -10388,6 +10389,7 @@ micro-sign = "toothed-serifed"
 
 [composite.ss08.slab-override.italic]
 k = "curly-top-left-and-bottom-right-serifed"
+r = "top-serifed"
 u = "toothed-motion-serifed"
 v = "curly-motion-serifed"
 w = "curly-motion-serifed"
@@ -10544,6 +10546,7 @@ j = "flat-hook-serifed"
 k = "symmetric-connected-serifless"
 l = "hooky"
 q = "straight-serifless"
+r = "serifless"
 t = "flat-hook"
 u = "toothed-serifless"
 v = "straight-serifless"
@@ -10605,6 +10608,7 @@ i = "serifed"
 k = "symmetric-connected-serifed"
 l = "serifed"
 q = "straight-serifed"
+r = "serifed"
 u = "toothed-serifed"
 v = "straight-serifed"
 w = "rounded-vertical-sides-serifed"
@@ -10630,6 +10634,7 @@ i = "serifed-flat-tailed"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
 l = "serifed-flat-tailed"
 q = "top-cut-straight-serifed"
+r = "top-serifed"
 u = "tailed-motion-serifed"
 v = "straight-motion-serifed"
 w = "rounded-vertical-sides-motion-serifed"
@@ -10671,6 +10676,8 @@ at = "threefold"
 dollar = "through-cap"
 cent = "through-cap"
 percent = "rings-continuous-slash"
+question = "smooth"
+pilcrow = "high"
 
 [composite.ss11.slab-override.design]
 two = "straight-neck-serifed"
@@ -10968,6 +10975,7 @@ i = "serifed"
 j = "flat-hook-serifed"
 k = "symmetric-connected-serifless"
 l = "serifed-flat-tailed"
+r = "serifless"
 t = "flat-hook-short-neck"
 u = "toothless-rounded-serifless"
 v = "straight-serifless"
@@ -11042,6 +11050,7 @@ d = "toothed-serifed"
 f = "flat-hook-serifed"
 g = "single-storey-flat-hook-serifed"
 k = "symmetric-connected-serifed"
+r = "serifed"
 u = "toothless-rounded-serifed"
 v = "straight-serifed"
 w = "straight-flat-top-serifed"
@@ -11072,6 +11081,7 @@ a = "single-storey-tailed"
 f = "flat-hook-tailed"
 g = "single-storey-flat-hook-serifless"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
+r = "top-serifed"
 u = "toothless-rounded-motion-serifed"
 v = "straight-motion-serifed"
 w = "straight-flat-top-motion-serifed"
@@ -11580,6 +11590,7 @@ j = "serifed"
 k = "symmetric-connected-serifless"
 l = "serifed"
 q = "earless-corner-straight-serifless"
+r = "serifless"
 t = "bent-hook"
 u = "toothed-serifless"
 v = "straight-serifless"
@@ -11638,6 +11649,7 @@ d = "toothed-serifed"
 f = "serifed-crossbar-at-x-height"
 k = "symmetric-connected-serifed"
 q = "earless-corner-straight-serifed"
+r = "serifed"
 u = "toothed-serifed"
 v = "straight-serifed"
 w = "straight-serifed"
@@ -11664,6 +11676,7 @@ micro-sign = "tailed-serifed"
 [composite.ss18.slab-override.italic]
 f = "extended-crossbar-at-x-height"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
+r = "top-serifed"
 u = "toothed-motion-serifed"
 v = "straight-motion-serifed"
 w = "straight-motion-serifed"
@@ -11699,11 +11712,13 @@ w = "curly-serifless"
 x = "curly-serifless"
 y = "curly-serifless"
 z = "curly-serifless"
+lower-eth = "curly-bar"
 capital-delta = "curly"
 lower-kappa = "curly-serifless"
 capital-lambda = "curly-serifless"
 lower-lambda = "curly"
 lower-chi = "curly-serifless"
+partial-derivative = "curly-bar"
 cyrl-capital-u = "curly-serifless"
 cyrl-u = "curly-serifless"
 cyrl-capital-ya = "curly-serifless"
