Add serifs to Latin Lower Lambda under Slab.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -6213,31 +6213,37 @@ tagKind = "letter"
 rank = 1
 description = "More-straight Greek lower Lambda (`λ`)"
 selector."grek/lambda" = "straightSerifless"
+selector."latn/lambda" = "straight"
 
 [prime.lower-lambda.variants.straight-turn]
 rank = 2
 description = "Greek lower Lambda (`λ`) with straight upper and a tail turns leftward"
 selector."grek/lambda" = "straightTurnSerifless"
+selector."latn/lambda" = "straightTurn"
 
 [prime.lower-lambda.variants.tailed-turn]
 rank = 3
 description = "More curly Greek lower Lambda (`λ`), with a tail turns leftward at top and a tail turns right at bottom-right"
 selector."grek/lambda" = "tailedTurnSerifless"
+selector."latn/lambda" = "tailedTurn"
 
 [prime.lower-lambda.variants.curly]
 rank = 4
 description = "More curly Greek lower Lambda (`λ`), like Iosevka 2.x"
 selector."grek/lambda" = "curlySerifless"
+selector."latn/lambda" = "curly"
 
 [prime.lower-lambda.variants.curly-turn]
 rank = 5
 description = "More curly Greek lower Lambda (`λ`), like Iosevka 2.x, with a tail turns leftward"
 selector."grek/lambda" = "curlyTurnSerifless"
+selector."latn/lambda" = "curlyTurn"
 
 [prime.lower-lambda.variants.curly-tailed-turn]
 rank = 6
 description = "More curly Greek lower Lambda (`λ`), with a tail turns leftward at top, a tail turns right at bottom-right, and curly bottom-left leg"
 selector."grek/lambda" = "curlyTailedTurnSerifless"
+selector."latn/lambda" = "curlyTailedTurn"
 
 
 
@@ -9411,7 +9417,6 @@ z = "cursive"
 long-s = "flat-hook-tailed"
 eszet = "sulzbacher-tailed-serifless"
 lower-kappa = "straight-top-left-serifed"
-lower-lambda = "straight"
 lower-mu = "tailed-motion-serifed"
 cyrl-a = "single-storey-tailed"
 cyrl-ve = "cursive"
@@ -10187,6 +10192,10 @@ lower-pi = "tailless"
 lower-tau = "tailless"
 cyrl-a = "double-storey-serifless"
 cyrl-ve = "standard-serifless"
+cyrl-capital-zhe = "symmetric-touching"
+cyrl-zhe = "symmetric-touching"
+cyrl-capital-ka = "symmetric-touching-serifless"
+cyrl-ka = "symmetric-touching-serifless"
 cyrl-capital-u = "straight-turn-serifless"
 cyrl-u = "straight-turn-serifless"
 cyrl-ef = "serifless"
@@ -10240,7 +10249,8 @@ lower-mu = "toothed-serifed"
 cyrl-a = "double-storey-serifed"
 cyrl-ve = "standard-bilateral-serifed"
 cyrl-ze = "unilateral-serifed"
-cyrl-ka = "symmetric-connected-serifed"
+cyrl-capital-ka = "symmetric-touching-serifed"
+cyrl-ka = "symmetric-touching-serifed"
 cyrl-capital-u = "straight-turn-serifed"
 cyrl-u = "straight-turn-serifed"
 cyrl-ef = "serifed"
@@ -11105,6 +11115,7 @@ tag = "ss15"
 description = "IBM Plex Mono Style"
 
 [composite.ss15.design]
+capital-d = "more-rounded-serifless"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-m = "hanging-serifless"
@@ -11197,6 +11208,7 @@ cyrl-yery = "cursive"
 ampersand = "closed"
 
 [composite.ss15.slab-override.design]
+capital-d = "more-rounded-bilateral-serifed"
 capital-m = "hanging-serifed"
 capital-v = "straight-serifed"
 capital-w = "straight-serifed"
