Optimize `full-serifed` variants for three `k`-derived letters.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -3442,7 +3442,7 @@ disableIf = [ { body = "diagonal-tailed-cursive" } ]
 descriptionAffix = "full serifs at legs"
 selectorAffix.k = "fullSerifed"
 selectorAffix."k/sansSerif" = "serifless"
-selectorAffix."latn/kappa" = "fullSerifedKappa"
+selectorAffix."latn/kappa" = "fullSerifed"
 selectorAffix.kHookTop = "fullSerifed"
 selectorAffix.kDescender = "fullSerifed"
 
@@ -6142,7 +6142,7 @@ selectorAffix."grek/kappa/sansSerif" = "serifless"
 [prime.lower-kappa.variants-buildup.stages.serifs.full-serifed]
 rank = 8
 descriptionAffix = "full serifs at legs"
-selectorAffix."grek/kappa" = "fullSerifedKappa"
+selectorAffix."grek/kappa" = "fullSerifed"
 selectorAffix."grek/kappa/sansSerif" = "serifless"
 
 
@@ -10573,6 +10573,7 @@ cyrl-a = "double-storey-toothless-corner"
 cyrl-u = "straight-serifless"
 one = "base-flat-top-serif"
 four = "closed-serifless"
+five = "upright-flat-serifless"
 six = "straight-bar"
 seven = "straight-serifless"
 eight = "two-circles"
@@ -10632,6 +10633,7 @@ cyrl-ka = "symmetric-connected-serifed"
 cyrl-capital-u = "straight-serifed"
 cyrl-u = "straight-serifed"
 four = "closed-serifed"
+five = "upright-flat-serifed"
 seven = "straight-serifed"
 micro-sign = "toothless-rounded-serifed"
 
