Rename `turn`{`C`|`c`} → {`O`|`o`}`Open`, remove swash.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -712,6 +712,7 @@ selector.C = "serifless"
 selector."C/sansSerif" = "serifless"
 selector."C/descBase" = "serifless"
 selector.CHookTop = "unilateralSerifed"
+selector.OOpen = "serifless"
 selector.CTopSerifOnly = "serifless"
 selector.CBottomSerifOnly = "serifless"
 
@@ -722,6 +723,7 @@ selector.C = "unilateralSerifed"
 selector."C/sansSerif" = "serifless"
 selector."C/descBase" = "bilateralSerifed"
 selector.CHookTop = "unilateralSerifed"
+selector.OOpen = "bottomSerifed"
 selector.CTopSerifOnly = "unilateralSerifed"
 selector.CBottomSerifOnly = "serifless"
 
@@ -732,6 +734,7 @@ selector.C = "bilateralSerifed"
 selector."C/sansSerif" = "serifless"
 selector."C/descBase" = "bilateralSerifed"
 selector.CHookTop = "bilateralSerifed"
+selector.OOpen = "bilateralSerifed"
 selector.CTopSerifOnly = "unilateralSerifed"
 selector.CBottomSerifOnly = "bottomSerifed"
 
@@ -742,6 +745,7 @@ selector.C = "unilateralInwardSerifed"
 selector."C/sansSerif" = "serifless"
 selector."C/descBase" = "hybridSerifed1"
 selector.CHookTop = "unilateralInwardSerifed"
+selector.OOpen = "bottomInwardSerifed"
 selector.CTopSerifOnly = "unilateralInwardSerifed"
 selector.CBottomSerifOnly = "serifless"
 
@@ -752,6 +756,7 @@ selector.C = "bilateralInwardSerifed"
 selector."C/sansSerif" = "serifless"
 selector."C/descBase" = "bilateralInwardSerifed"
 selector.CHookTop = "bilateralInwardSerifed"
+selector.OOpen = "bilateralInwardSerifed"
 selector.CTopSerifOnly = "unilateralInwardSerifed"
 selector.CBottomSerifOnly = "bottomInwardSerifed"
 
@@ -2520,6 +2525,8 @@ selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "serifless"
 selector.cCurlyTail = "serifless"
 selector.cHookTop = "unilateralSerifed"
+selector.oOpen = "serifless"
+selector."oOpen/descBase" = "bottomSerifed"
 selector.cTopSerifOnly = "serifless"
 selector.cBottomSerifOnly = "serifless"
 
@@ -2531,6 +2538,8 @@ selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "bilateralSerifed"
 selector.cCurlyTail = "unilateralSerifed"
 selector.cHookTop = "unilateralSerifed"
+selector.oOpen = "bottomSerifed"
+selector."oOpen/descBase" = "bottomSerifed"
 selector.cTopSerifOnly = "unilateralSerifed"
 selector.cBottomSerifOnly = "serifless"
 
@@ -2542,6 +2551,8 @@ selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "bilateralSerifed"
 selector.cCurlyTail = "unilateralSerifed"
 selector.cHookTop = "bilateralSerifed"
+selector.oOpen = "bilateralSerifed"
+selector."oOpen/descBase" = "bilateralSerifed"
 selector.cTopSerifOnly = "unilateralSerifed"
 selector.cBottomSerifOnly = "bottomSerifed"
 
@@ -2553,6 +2564,8 @@ selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "hybridSerifed1"
 selector.cCurlyTail = "unilateralInwardSerifed"
 selector.cHookTop = "unilateralInwardSerifed"
+selector.oOpen = "bottomInwardSerifed"
+selector."oOpen/descBase" = "bottomInwardSerifed"
 selector.cTopSerifOnly = "unilateralInwardSerifed"
 selector.cBottomSerifOnly = "serifless"
 
@@ -2564,6 +2577,8 @@ selector."c/sansSerif" = "serifless"
 selector."c/descBase" = "bilateralInwardSerifed"
 selector.cCurlyTail = "unilateralInwardSerifed"
 selector.cHookTop = "bilateralInwardSerifed"
+selector.oOpen = "bilateralInwardSerifed"
+selector."oOpen/descBase" = "bilateralInwardSerifed"
 selector.cTopSerifOnly = "unilateralInwardSerifed"
 selector.cBottomSerifOnly = "bottomInwardSerifed"
 
