--- a/params/variants.toml
+++ b/params/variants.toml
@@ -2729,19 +2729,13 @@ tagKind = "letter"
 rank = 1
 description = "`e` with flat crossbar"
 selector.e = "flatCrossbar"
-selector.Schwa = "flatCrossbar"
-selector.schwa = "flatCrossbar"
-selector."cyrl/abk/Che" = "flatCrossbar"
-selector."cyrl/abk/che" = "flatCrossbar"
+selector.eCap = "flatCrossbar"
 
 [prime.e.variants.rounded]
 rank = 2
 description = "`e` with more rounded shape"
 selector.e = "rounded"
-selector.Schwa = "flatCrossbar"
-selector.schwa = "rounded"
-selector."cyrl/abk/Che" = "flatCrossbar"
-selector."cyrl/abk/che" = "rounded"
+selector.eCap = "flatCrossbar"
 
 
 
@@ -6652,14 +6646,14 @@ rank = 1
 next = "double-storey-hook"
 descriptionAffix = "double-storey body"
 selectorAffix."cyrl/a" = "doubleStorey"
-selectorAffix."cyrl/ae/a" = "doubleStorey"
+selectorAffix."cyrl/aie/a" = "doubleStorey"
 
 [prime.cyrl-a.variants-buildup.stages.storey.single-storey]
 rank = 2
 next = "ear"
 descriptionAffix = "single-storey body"
 selectorAffix."cyrl/a" = "singleStorey"
-selectorAffix."cyrl/ae/a" = "doubleStorey"
+selectorAffix."cyrl/aie/a" = "doubleStorey"
 
 [prime.cyrl-a.variants-buildup.stages.double-storey-hook."*"]
 next = "bar"
@@ -6669,14 +6663,14 @@ rank = 1
 keyAffix = ""
 descriptionAffix = "serifless hook"
 selectorAffix."cyrl/a" = ""
-selectorAffix."cyrl/ae/a" = ""
+selectorAffix."cyrl/aie/a" = ""
 
 [prime.cyrl-a.variants-buildup.stages.double-storey-hook.hook-serifed]
 rank = 2
 keyAffix = "hook-inward-serifed"
 descriptionAffix = "serifed hook"
 selectorAffix."cyrl/a" = "hookInwardSerifed"
-selectorAffix."cyrl/ae/a" = "hookInwardSerifed"
+selectorAffix."cyrl/aie/a" = "hookInwardSerifed"
 
 [prime.cyrl-a.variants-buildup.stages.ear."*"]
 next = "bar"
@@ -6685,72 +6679,72 @@ next = "bar"
 rank = 1
 keyAffix = ""
 selectorAffix."cyrl/a" = ""
-selectorAffix."cyrl/ae/a" = ""
+selectorAffix."cyrl/aie/a" = ""
 
 [prime.cyrl-a.variants-buildup.stages.ear.top-cut]
 rank = 2
 descriptionAffix = "a diagonal cut at top"
 selectorAffix."cyrl/a" = "topCut"
-selectorAffix."cyrl/ae/a" = ""
+selectorAffix."cyrl/aie/a" = ""
 
 [prime.cyrl-a.variants-buildup.stages.ear.earless-corner]
 rank = 3
 descriptionAffix = "earless (cornered top-right)"
 selectorAffix."cyrl/a" = "earlessCorner"
-selectorAffix."cyrl/ae/a" = ""
+selectorAffix."cyrl/aie/a" = ""
 
 [prime.cyrl-a.variants-buildup.stages.ear.earless-rounded]
 rank = 4
 descriptionAffix = "earless (rounded top-right)"
 selectorAffix."cyrl/a" = "earlessRounded"
-selectorAffix."cyrl/ae/a" = ""
+selectorAffix."cyrl/aie/a" = ""
 
 [prime.cyrl-a.variants-buildup.stages.bar.serifless]
 rank = 1
 descriptionAffix = "serif at terminal"
 descriptionJoiner = "without"
 selectorAffix."cyrl/a" = "serifless"
-selectorAffix."cyrl/ae/a" = "serifless"
+selectorAffix."cyrl/aie/a" = "serifless"
 
 [prime.cyrl-a.variants-buildup.stages.bar.serifed]
 rank = 2
 descriptionAffix = "serif at terminal"
 selectorAffix."cyrl/a" = "serifed"
-selectorAffix."cyrl/ae/a" = "serifless"
+selectorAffix."cyrl/aie/a" = "serifless"
 
 [prime.cyrl-a.variants-buildup.stages.bar.double-serifed]
 rank = 3
 disableIf = [{ storey = "double-storey" }, { ear = "NOT eared" }]
 descriptionAffix = "serifs at top and bottom"
 selectorAffix."cyrl/a" = "doubleSerifed"
-selectorAffix."cyrl/ae/a" = "serifless"
+selectorAffix."cyrl/aie/a" = "serifless"
 
 [prime.cyrl-a.variants-buildup.stages.bar.tailed]
 rank = 4
 descriptionAffix = "curly tail"
 selectorAffix."cyrl/a" = "tailed"
-selectorAffix."cyrl/ae/a" = "serifless"
+selectorAffix."cyrl/aie/a" = "serifless"
 
 [prime.cyrl-a.variants-buildup.stages.bar.tailed-serifed]
 rank = 5
 disableIf = [{ storey = "double-storey" }, { ear = "NOT eared" }]
 descriptionAffix = "curly tail; with serifs at top and bottom"
 selectorAffix."cyrl/a" = "tailedSerifed"
-selectorAffix."cyrl/ae/a" = "serifless"
+selectorAffix."cyrl/aie/a" = "serifless"
 
 [prime.cyrl-a.variants-buildup.stages.bar.toothless-corner]
 rank = 6
 disableIf = [{ storey = "single-storey" }]
 descriptionAffix = "toothless (cornered bottom-right)"
 selectorAffix."cyrl/a" = "toothlessCorner"
-selectorAffix."cyrl/ae/a" = "serifless"
+selectorAffix."cyrl/aie/a" = "serifless"
 
 [prime.cyrl-a.variants-buildup.stages.bar.toothless-rounded]
 rank = 7
 disableIf = [{ storey = "single-storey" }]
 descriptionAffix = "toothless (rounded bottom-right)"
 selectorAffix."cyrl/a" = "toothlessRounded"
-selectorAffix."cyrl/ae/a" = "serifless"
+selectorAffix."cyrl/aie/a" = "serifless"
 
 
 
@@ -7940,6 +7934,7 @@ description = "Serifless Cyrillic Capital E (`Э`)"
 selector."cyrl/E" = "serifless"
 selector."cyrl/ETopSerifOnly" = "serifless"
 selector."cyrl/Ye" = "serifless"
+selector."cyrl/YeTopSerifOnly" = "serifless"
 selector."currency/euroSign" = "serifless"
 
 [prime.cyrl-capital-e.variants.unilateral-serifed]
@@ -7948,6 +7943,7 @@ description = "Cyrillic Capital E (`Э`) with serif at top"
 selector."cyrl/E" = "unilateralSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralSerifed"
 selector."cyrl/Ye" = "unilateralSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralSerifed"
 selector."currency/euroSign" = "unilateralSerifed"
 
 [prime.cyrl-capital-e.variants.unilateral-bottom-serifed]
@@ -7956,6 +7952,7 @@ description = "Cyrillic Capital E (`Э`) with serif at bottom"
 selector."cyrl/E" = "bottomSerifed"
 selector."cyrl/ETopSerifOnly" = "serifless"
 selector."cyrl/Ye" = "unilateralSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralSerifed"
 selector."currency/euroSign" = "unilateralSerifed"
 
 [prime.cyrl-capital-e.variants.bilateral-serifed]
@@ -7964,6 +7961,7 @@ description = "Cyrillic Capital E (`Э`) with serifs at both top and bottom"
 selector."cyrl/E" = "bilateralSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralSerifed"
 selector."cyrl/Ye" = "bilateralSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralSerifed"
 selector."currency/euroSign" = "bilateralSerifed"
 
 [prime.cyrl-capital-e.variants.unilateral-inward-serifed]
@@ -7972,6 +7970,7 @@ description = "Cyrillic Capital E (`Э`) with inward serif at top"
 selector."cyrl/E" = "unilateralInwardSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/Ye" = "unilateralInwardSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralInwardSerifed"
 selector."currency/euroSign" = "unilateralInwardSerifed"
 
 [prime.cyrl-capital-e.variants.unilateral-bottom-inward-serifed]
@@ -7980,6 +7979,7 @@ description = "Cyrillic Capital E (`Э`) with inward serif at bottom"
 selector."cyrl/E" = "bottomInwardSerifed"
 selector."cyrl/ETopSerifOnly" = "serifless"
 selector."cyrl/Ye" = "unilateralInwardSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralInwardSerifed"
 selector."currency/euroSign" = "unilateralInwardSerifed"
 
 [prime.cyrl-capital-e.variants.bilateral-inward-serifed]
@@ -7988,6 +7988,7 @@ description = "Cyrillic Capital E (`Э`) with inward serif at both top and botto
 selector."cyrl/E" = "bilateralInwardSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/Ye" = "bilateralInwardSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralInwardSerifed"
 selector."currency/euroSign" = "bilateralInwardSerifed"
 
 [prime.cyrl-capital-e.variants.unilateral-mid-serifed]
@@ -7996,6 +7997,7 @@ description = "Cyrillic Capital E (`Э`) with serif at top and center"
 selector."cyrl/E" = "unilateralMidSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralSerifed"
 selector."cyrl/Ye" = "unilateralMidSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralSerifed"
 selector."currency/euroSign" = "unilateralSerifed"
 
 [prime.cyrl-capital-e.variants.unilateral-bottom-mid-serifed]
@@ -8004,6 +8006,7 @@ description = "Cyrillic Capital E (`Э`) with serif at bottom and center"
 selector."cyrl/E" = "bottomMidSerifed"
 selector."cyrl/ETopSerifOnly" = "serifless"
 selector."cyrl/Ye" = "unilateralMidSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralSerifed"
 selector."currency/euroSign" = "unilateralSerifed"
 
 [prime.cyrl-capital-e.variants.bilateral-mid-serifed]
@@ -8012,6 +8015,7 @@ description = "Cyrillic Capital E (`Э`) with serifs at both top, bottom and cen
 selector."cyrl/E" = "bilateralMidSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralSerifed"
 selector."cyrl/Ye" = "bilateralMidSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralSerifed"
 selector."currency/euroSign" = "bilateralSerifed"
 
 [prime.cyrl-capital-e.variants.unilateral-inward-mid-serifed]
@@ -8020,6 +8024,7 @@ description = "Cyrillic Capital E (`Э`) with inward serif at top and center"
 selector."cyrl/E" = "unilateralInwardMidSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/Ye" = "unilateralInwardMidSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralInwardSerifed"
 selector."currency/euroSign" = "unilateralInwardSerifed"
 
 [prime.cyrl-capital-e.variants.unilateral-bottom-inward-mid-serifed]
@@ -8028,6 +8033,7 @@ description = "Cyrillic Capital E (`Э`) with inward serif at bottom and center"
 selector."cyrl/E" = "bottomInwardMidSerifed"
 selector."cyrl/ETopSerifOnly" = "serifless"
 selector."cyrl/Ye" = "unilateralInwardMidSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralInwardSerifed"
 selector."currency/euroSign" = "unilateralInwardSerifed"
 
 [prime.cyrl-capital-e.variants.bilateral-inward-mid-serifed]
@@ -8036,6 +8042,7 @@ description = "Cyrillic Capital E (`Э`) with inward serif at both top, bottom a
 selector."cyrl/E" = "bilateralInwardMidSerifed"
 selector."cyrl/ETopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/Ye" = "bilateralInwardMidSerifed"
+selector."cyrl/YeTopSerifOnly" = "unilateralInwardSerifed"
 selector."currency/euroSign" = "bilateralInwardSerifed"
 
 
@@ -8051,6 +8058,7 @@ description = "Serifless Cyrillic Lower E (`э`)"
 selector."cyrl/e" = "serifless"
 selector."cyrl/eTopSerifOnly" = "serifless"
 selector."cyrl/ye" = "serifless"
+selector."cyrl/yeTopSerifOnly" = "serifless"
 
 [prime.cyrl-e.variants.unilateral-serifed]
 rank = 2
@@ -8058,6 +8066,7 @@ description = "Cyrillic Lower E (`э`) with serif at top"
 selector."cyrl/e" = "unilateralSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralSerifed"
 selector."cyrl/ye" = "unilateralSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralSerifed"
 
 [prime.cyrl-e.variants.unilateral-bottom-serifed]
 rank = 3
@@ -8065,6 +8074,7 @@ description = "Cyrillic Lower E (`э`) with serif at bottom"
 selector."cyrl/e" = "bottomSerifed"
 selector."cyrl/eTopSerifOnly" = "serifless"
 selector."cyrl/ye" = "unilateralSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralSerifed"
 
 [prime.cyrl-e.variants.bilateral-serifed]
 rank = 4
@@ -8072,6 +8082,7 @@ description = "Cyrillic Lower E (`э`) with serifs at both top and bottom"
 selector."cyrl/e" = "bilateralSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralSerifed"
 selector."cyrl/ye" = "bilateralSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralSerifed"
 
 [prime.cyrl-e.variants.unilateral-inward-serifed]
 rank = 5
@@ -8079,6 +8090,7 @@ description = "Cyrillic Lower E (`э`) with inward serif at top"
 selector."cyrl/e" = "unilateralInwardSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/ye" = "unilateralInwardSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralInwardSerifed"
 
 [prime.cyrl-e.variants.unilateral-bottom-inward-serifed]
 rank = 6
@@ -8086,6 +8098,7 @@ description = "Cyrillic Lower E (`э`) with inward serif at bottom"
 selector."cyrl/e" = "bottomInwardSerifed"
 selector."cyrl/eTopSerifOnly" = "serifless"
 selector."cyrl/ye" = "unilateralInwardSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralInwardSerifed"
 
 [prime.cyrl-e.variants.bilateral-inward-serifed]
 rank = 7
@@ -8093,6 +8106,7 @@ description = "Cyrillic Lower E (`э`) with inward serif at both top and bottom"
 selector."cyrl/e" = "bilateralInwardSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/ye" = "bilateralInwardSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralInwardSerifed"
 
 [prime.cyrl-e.variants.unilateral-mid-serifed]
 rank = 8
@@ -8100,6 +8114,7 @@ description = "Cyrillic Lower E (`э`) with serif at top and center"
 selector."cyrl/e" = "unilateralMidSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralSerifed"
 selector."cyrl/ye" = "unilateralMidSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralSerifed"
 
 [prime.cyrl-e.variants.unilateral-bottom-mid-serifed]
 rank = 9
@@ -8107,6 +8122,7 @@ description = "Cyrillic Lower E (`э`) with serif at bottom and center"
 selector."cyrl/e" = "bottomMidSerifed"
 selector."cyrl/eTopSerifOnly" = "serifless"
 selector."cyrl/ye" = "unilateralMidSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralSerifed"
 
 [prime.cyrl-e.variants.bilateral-mid-serifed]
 rank = 10
@@ -8114,6 +8130,7 @@ description = "Cyrillic Lower E (`э`) with serifs at both top, bottom and cente
 selector."cyrl/e" = "bilateralMidSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralSerifed"
 selector."cyrl/ye" = "bilateralMidSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralSerifed"
 
 [prime.cyrl-e.variants.unilateral-inward-mid-serifed]
 rank = 11
@@ -8121,6 +8138,7 @@ description = "Cyrillic Lower E (`э`) with inward serif at top and center"
 selector."cyrl/e" = "unilateralInwardMidSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/ye" = "unilateralInwardMidSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralInwardSerifed"
 
 [prime.cyrl-e.variants.unilateral-bottom-inward-mid-serifed]
 rank = 12
@@ -8128,6 +8146,7 @@ description = "Cyrillic Lower E (`э`) with inward serif at bottom and center"
 selector."cyrl/e" = "bottomInwardMidSerifed"
 selector."cyrl/eTopSerifOnly" = "serifless"
 selector."cyrl/ye" = "unilateralInwardMidSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralInwardSerifed"
 
 [prime.cyrl-e.variants.bilateral-inward-mid-serifed]
 rank = 13
@@ -8135,6 +8154,7 @@ description = "Cyrillic Lower E (`э`) with inward serif at both top, bottom and
 selector."cyrl/e" = "bilateralInwardMidSerifed"
 selector."cyrl/eTopSerifOnly" = "unilateralInwardSerifed"
 selector."cyrl/ye" = "bilateralInwardMidSerifed"
+selector."cyrl/yeTopSerifOnly" = "unilateralInwardSerifed"
 
 
 
@@ -8154,19 +8174,19 @@ next = "openness"
 rank = 1
 descriptionAffix = "straight leg"
 selectorAffix."cyrl/Ya" = "straight"
-selectorAffix."cyrl/Yae/left" = "straight"
+selectorAffix."cyrl/YaIe/YaHalf" = "straight"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.leg.curly]
 rank = 2
 descriptionAffix = "curly leg"
 selectorAffix."cyrl/Ya" = "curly"
-selectorAffix."cyrl/Yae/left" = "curly"
+selectorAffix."cyrl/YaIe/YaHalf" = "curly"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.leg.standing]
 rank = 3
 descriptionAffix = "standing leg (like Helvetica)"
 selectorAffix."cyrl/Ya" = "standing"
-selectorAffix."cyrl/Yae/left" = "standing"
+selectorAffix."cyrl/YaIe/YaHalf" = "standing"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.openness."*"]
 next = "serifs"
@@ -8175,32 +8195,32 @@ next = "serifs"
 rank = 1
 keyAffix = ""
 selectorAffix."cyrl/Ya" = ""
-selectorAffix."cyrl/Yae/left" = ""
+selectorAffix."cyrl/YaIe/YaHalf" = ""
 
 [prime.cyrl-capital-ya.variants-buildup.stages.openness.open]
 rank = 2
 descriptionAffix = "open contour"
 selectorAffix."cyrl/Ya" = "open"
-selectorAffix."cyrl/Yae/left" = "open"
+selectorAffix."cyrl/YaIe/YaHalf" = "open"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix."cyrl/Ya" = "serifless"
-selectorAffix."cyrl/Yae/left" = "serifless"
+selectorAffix."cyrl/YaIe/YaHalf" = "serifless"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs at bottom-left"
 selectorAffix."cyrl/Ya" = "bottomRightSerifed"
-selectorAffix."cyrl/Yae/left" = "bottomRightSerifed"
+selectorAffix."cyrl/YaIe/YaHalf" = "bottomRightSerifed"
 
 [prime.cyrl-capital-ya.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix."cyrl/Ya" = "serifed"
-selectorAffix."cyrl/Yae/left" = "bottomRightSerifed"
+selectorAffix."cyrl/YaIe/YaHalf" = "bottomRightSerifed"
 
 
 
@@ -8221,21 +8241,21 @@ rank = 1
 groupRank = 1
 descriptionAffix = "straight leg"
 selectorAffix."cyrl/ya" = "straight"
-selectorAffix."cyrl/yae/left" = "straight"
+selectorAffix."cyrl/yaie/ya" = "straight"
 
 [prime.cyrl-ya.variants-buildup.stages.leg.curly]
 rank = 2
 groupRank = 2
 descriptionAffix = "curly leg"
 selectorAffix."cyrl/ya" = "curly"
-selectorAffix."cyrl/yae/left" = "curly"
+selectorAffix."cyrl/yaie/ya" = "curly"
 
 [prime.cyrl-ya.variants-buildup.stages.leg.standing]
 rank = 3
 groupRank = 3
 descriptionAffix = "standing leg (like Helvetica)"
 selectorAffix."cyrl/ya" = "standing"
-selectorAffix."cyrl/yae/left" = "standing"
+selectorAffix."cyrl/yaie/ya" = "standing"
 
 [prime.cyrl-ya.variants-buildup.stages.openness."*"]
 next = "tails"
@@ -8245,14 +8265,14 @@ rank = 1
 groupRrank = 10
 keyAffix = ""
 selectorAffix."cyrl/ya" = ""
-selectorAffix."cyrl/yae/left" = ""
+selectorAffix."cyrl/yaie/ya" = ""
 
 [prime.cyrl-ya.variants-buildup.stages.openness.open]
 rank = 2
 groupRrank = 20
 descriptionAffix = "open contour"
 selectorAffix."cyrl/ya" = "open"
-selectorAffix."cyrl/yae/left" = "open"
+selectorAffix."cyrl/yaie/ya" = "open"
 
 [prime.cyrl-ya.variants-buildup.stages.tails."*"]
 next = "serifs"
@@ -8261,32 +8281,32 @@ next = "serifs"
 rank = 1
 keyAffix = ""
 selectorAffix."cyrl/ya" = ""
-selectorAffix."cyrl/yae/left" = ""
+selectorAffix."cyrl/yaie/ya" = ""
 
 [prime.cyrl-ya.variants-buildup.stages.tails.tailed]
 rank = 2
 descriptionAffix = "tail"
 selectorAffix."cyrl/ya" = "tailed"
-selectorAffix."cyrl/yae/left" = ""
+selectorAffix."cyrl/yaie/ya" = ""
 
 [prime.cyrl-ya.variants-buildup.stages.serifs.serifless]
 rank = 1
 descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix."cyrl/ya" = "serifless"
-selectorAffix."cyrl/yae/left" = "serifless"
+selectorAffix."cyrl/yaie/ya" = "serifless"
 
 [prime.cyrl-ya.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs at bottom-left"
 selectorAffix."cyrl/ya" = "bottomRightSerifed"
-selectorAffix."cyrl/yae/left" = "bottomRightSerifed"
+selectorAffix."cyrl/yaie/ya" = "bottomRightSerifed"
 
 [prime.cyrl-ya.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix."cyrl/ya" = "smallCyrl"
-selectorAffix."cyrl/yae/left" = "bottomRightSerifed"
+selectorAffix."cyrl/yaie/ya" = "bottomRightSerifed"
 
 
 
