--- a/params/variants.toml
+++ b/params/variants.toml
@@ -4545,7 +4545,7 @@ rank = 1
 descriptionAffix = "toothed shape"
 selectorAffix.u = "toothed"
 selectorAffix."u/sansSerif" = "toothed"
-selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix."u/descBase" = "descBase"
 selectorAffix.uShortLeg = "toothed"
 selectorAffix.uHookLeft = "toothed"
 selectorAffix.turnh = "toothed"
@@ -4572,7 +4572,7 @@ rank = 2
 descriptionAffix = "tailed shape"
 selectorAffix.u = "tailed"
 selectorAffix."u/sansSerif" = "tailed"
-selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix."u/descBase" = "descBase"
 selectorAffix.uShortLeg = "tailed"
 selectorAffix.uHookLeft = "tailed"
 selectorAffix.turnh = "toothed"
@@ -4599,7 +4599,7 @@ rank = 3
 descriptionAffix = "toothless (corner bottom-right) shape"
 selectorAffix.u = "toothlessCorner"
 selectorAffix."u/sansSerif" = "toothlessCorner"
-selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix."u/descBase" = "descBase"
 selectorAffix.uShortLeg = "toothlessCorner"
 selectorAffix.uHookLeft = "toothlessCorner"
 selectorAffix.turnh = "toothlessCorner"
@@ -4626,7 +4626,7 @@ rank = 4
 descriptionAffix = "toothless (rounded) shape"
 selectorAffix.u = "toothlessRounded"
 selectorAffix."u/sansSerif" = "toothlessRounded"
-selectorAffix."u/uRTailBase" = "urtBase"
+selectorAffix."u/descBase" = "descBase"
 selectorAffix.uShortLeg = "toothlessRounded"
 selectorAffix.uHookLeft = "toothlessRounded"
 selectorAffix.turnh = "toothed"
@@ -4654,7 +4654,7 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.u = "serifless"
 selectorAffix."u/sansSerif" = "serifless"
-selectorAffix."u/uRTailBase" = "serifless"
+selectorAffix."u/descBase" = "serifless"
 selectorAffix.uShortLeg = "serifless"
 selectorAffix.uHookLeft = "serifless"
 selectorAffix.turnh = "serifless"
@@ -4682,7 +4682,7 @@ disableIf = [{ body = "NOT toothed" }]
 descriptionAffix = "serif at bottom-right"
 selectorAffix.u = "bottomRightSerifed"
 selectorAffix."u/sansSerif" = "serifless"
-selectorAffix."u/uRTailBase" = "serifless"
+selectorAffix."u/descBase" = "serifless"
 selectorAffix.uShortLeg = "bottomRightSerifed"
 selectorAffix.uHookLeft = "bottomRightSerifed"
 selectorAffix.turnh = "serifless"
@@ -4709,7 +4709,7 @@ rank = 3
 descriptionAffix = "motion serifs at top-left and bottom-right"
 selectorAffix.u = "motionSerifed"
 selectorAffix."u/sansSerif" = "serifless"
-selectorAffix."u/uRTailBase" = "motionSerifed"
+selectorAffix."u/descBase" = "motionSerifed"
 selectorAffix.uShortLeg = "motionSerifed"
 selectorAffix.uHookLeft = {if = [{body = "toothed"}], then = "bottomRightSerifed", else = "serifless"}
 selectorAffix.turnh = "motionSerifed"
@@ -4736,7 +4736,7 @@ rank = 4
 descriptionAffix = "serifs"
 selectorAffix.u = "serifed"
 selectorAffix."u/sansSerif" = "serifless"
-selectorAffix."u/uRTailBase" = "serifed"
+selectorAffix."u/descBase" = "serifed"
 selectorAffix.uShortLeg = "motionSerifed"
 selectorAffix.uHookLeft = "serifed"
 selectorAffix.turnh = "serifed"
