Fix style assignment of `l` in Libration Mono style (SS06) (#2882).

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -10189,7 +10189,7 @@ f = "flat-hook-serifless-crossbar-at-x-height"
 i = "serifed"
 j = "serifed"
 k = "straight-serifless"
-l = "serifed-flat-tailed"
+l = "serifed"
 r = "hookless-serifless"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
