Rename `HHookTop` → `HHookLeft`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -978,6 +978,7 @@ selector."H/descBase" = "serifless"
 selector.leftHalfH = "serifless"
 selector.rightHalfH = "serifless"
 selector.Hwair = "serifless"
+selector.HHookLeft = "serifless"
 selector.HHookTop = "serifless"
 
 [prime.capital-h.variants.top-left-serifed]
@@ -989,6 +990,7 @@ selector."H/descBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "serifless"
 selector.Hwair = "topLeftSerifed"
+selector.HHookLeft = "serifless"
 selector.HHookTop = "serifless"
 
 [prime.capital-h.variants.top-left-bottom-right-serifed]
@@ -1000,6 +1002,7 @@ selector."H/descBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "topLeftBottomRightSerifed"
 selector.Hwair = "topLeftSerifed"
+selector.HHookLeft = "topLeftBottomRightSerifed"
 selector.HHookTop = "topLeftBottomRightSerifed"
 
 [prime.capital-h.variants.serifed]
@@ -1011,6 +1014,7 @@ selector."H/descBase" = "serifed"
 selector.leftHalfH = "serifed"
 selector.rightHalfH = "serifed"
 selector.Hwair = "serifedExceptBottomRight"
+selector.HHookLeft = "serifed"
 selector.HHookTop = "serifed"
 
 
