Internally rename some phonetic characters. (#2890)
* Rename {`V`|`v`}`HookTop` → {`V`|`v`}`Script`.

* Rename `tTurnedCurlyTail` → `turntCurlyTail`.

* Rename `HHookTop` → `HHookLeft`.

* Rename {`Dbar`|`dBar`} → {`Tau`|`tau`}`Gallicum`.

* Rename click consonants (`ǀ`, `ǁ`, `ǂ`, `ǃ`, `𝼊`).

---------

Co-authored-by: Belleve <belleve@typeof.net>

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -978,6 +978,7 @@ selector."H/descBase" = "serifless"
 selector.leftHalfH = "serifless"
 selector.rightHalfH = "serifless"
 selector.Hwair = "serifless"
+selector.HHookLeft = "serifless"
 selector.HHookTop = "serifless"
 
 [prime.capital-h.variants.top-left-serifed]
@@ -989,6 +990,7 @@ selector."H/descBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "serifless"
 selector.Hwair = "topLeftSerifed"
+selector.HHookLeft = "serifless"
 selector.HHookTop = "serifless"
 
 [prime.capital-h.variants.top-left-bottom-right-serifed]
@@ -1000,6 +1002,7 @@ selector."H/descBase" = "topLeftSerifed"
 selector.leftHalfH = "topLeftSerifed"
 selector.rightHalfH = "topLeftBottomRightSerifed"
 selector.Hwair = "topLeftSerifed"
+selector.HHookLeft = "topLeftBottomRightSerifed"
 selector.HHookTop = "topLeftBottomRightSerifed"
 
 [prime.capital-h.variants.serifed]
@@ -1011,6 +1014,7 @@ selector."H/descBase" = "serifed"
 selector.leftHalfH = "serifed"
 selector.rightHalfH = "serifed"
 selector.Hwair = "serifedExceptBottomRight"
+selector.HHookLeft = "serifed"
 selector.HHookTop = "serifed"
 
 
@@ -1778,16 +1782,16 @@ rank = 1
 descriptionAffix = "straight shape"
 selectorAffix.V = "straight"
 selectorAffix."V/sansSerif" = "straight"
-selectorAffix.VHookTop = ""
-selectorAffix.VHookRight = "straight"
+selectorAffix.VScript = ""
+selectorAffix."cyrl/Izhitsa" = "straight"
 
 [prime.capital-v.variants-buildup.stages.body.curly]
 rank = 2
 descriptionAffix = "curly shape"
 selectorAffix.V = "curly"
 selectorAffix."V/sansSerif" = "curly"
-selectorAffix.VHookTop = ""
-selectorAffix.VHookRight = "curly"
+selectorAffix.VScript = ""
+selectorAffix."cyrl/Izhitsa" = "curly"
 
 [prime.capital-v.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -1795,24 +1799,24 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.V = "serifless"
 selectorAffix."V/sansSerif" = "serifless"
-selectorAffix.VHookTop = "serifless"
-selectorAffix.VHookRight = "serifless"
+selectorAffix.VScript = "serifless"
+selectorAffix."cyrl/Izhitsa" = "serifless"
 
 [prime.capital-v.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
 descriptionAffix = "motion serifs"
 selectorAffix.V = "motionSerifed"
 selectorAffix."V/sansSerif" = "serifless"
-selectorAffix.VHookTop = "serifed"
-selectorAffix.VHookRight = "motionSerifed"
+selectorAffix.VScript = "motionSerifed"
+selectorAffix."cyrl/Izhitsa" = "motionSerifed"
 
 [prime.capital-v.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix.V = "serifed"
 selectorAffix."V/sansSerif" = "serifless"
-selectorAffix.VHookTop = "serifed"
-selectorAffix.VHookRight = "serifed"
+selectorAffix.VScript = "motionSerifed"
+selectorAffix."cyrl/Izhitsa" = "serifed"
 
 
 
@@ -4776,27 +4780,30 @@ rank = 1
 descriptionAffix = "straight body"
 selectorAffix.v = "straight"
 selectorAffix."v/sansSerif" = "straight"
-selectorAffix."v/nonCursive" = "straight"
-selectorAffix.vHookTop = ""
+selectorAffix.vScript = ""
+selectorAffix.vHookRight = "straight"
 selectorAffix.vLoop = "straight"
+selectorAffix."cyrl/izhitsa" = "straight"
 
 [prime.v.variants-buildup.stages.body.curly]
 rank = 2
 descriptionAffix = "curly body"
 selectorAffix.v = "curly"
 selectorAffix."v/sansSerif" = "curly"
-selectorAffix."v/nonCursive" = "curly"
-selectorAffix.vHookTop = ""
+selectorAffix.vScript = ""
+selectorAffix.vHookRight = "curly"
 selectorAffix.vLoop = "curly"
+selectorAffix."cyrl/izhitsa" = "curly"
 
 [prime.v.variants-buildup.stages.body.cursive]
 rank = 3
 descriptionAffix = "cursive body"
 selectorAffix.v = "cursive"
 selectorAffix."v/sansSerif" = "cursive"
-selectorAffix."v/nonCursive" = "straight"
-selectorAffix.vHookTop = ""
+selectorAffix.vScript = ""
+selectorAffix.vHookRight = "straight"
 selectorAffix.vLoop = "straight"
+selectorAffix."cyrl/izhitsa" = "straight"
 
 [prime.v.variants-buildup.stages.serifs.serifless]
 rank = 1
@@ -4804,9 +4811,10 @@ descriptionAffix = "serifs"
 descriptionJoiner = "without"
 selectorAffix.v = "serifless"
 selectorAffix."v/sansSerif" = "serifless"
-selectorAffix."v/nonCursive" = "serifless"
-selectorAffix.vHookTop = "serifless"
+selectorAffix.vScript = "serifless"
+selectorAffix.vHookRight = "serifless"
 selectorAffix.vLoop = "serifless"
+selectorAffix."cyrl/izhitsa" = "serifless"
 
 [prime.v.variants-buildup.stages.serifs.motion-serifed]
 rank = 2
@@ -4814,18 +4822,20 @@ disableIf = [{ body = "cursive" }]
 descriptionAffix = "motion serifs"
 selectorAffix.v = "motionSerifed"
 selectorAffix."v/sansSerif" = "serifless"
-selectorAffix."v/nonCursive" = "motionSerifed"
-selectorAffix.vHookTop = "serifed"
+selectorAffix.vScript = "motionSerifed"
+selectorAffix.vHookRight = "motionSerifed"
 selectorAffix.vLoop = "serifless"
+selectorAffix."cyrl/izhitsa" = "motionSerifed"
 
 [prime.v.variants-buildup.stages.serifs.serifed]
 rank = 3
 descriptionAffix = "serifs"
 selectorAffix.v = "serifed"
 selectorAffix."v/sansSerif" = "serifless"
-selectorAffix."v/nonCursive" = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
-selectorAffix.vHookTop = "serifed"
+selectorAffix.vScript = "motionSerifed"
+selectorAffix.vHookRight = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
 selectorAffix.vLoop = {if = [{body = "cursive"}], then = "serifless", else = "serifed"}
+selectorAffix."cyrl/izhitsa" = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
 
 
 
