Make {`V`|`v`}`Script` (`Ʋ`, `ʋ`) respond to `serifed` variants of V/v.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1815,7 +1815,7 @@ rank = 3
 descriptionAffix = "serifs"
 selectorAffix.V = "serifed"
 selectorAffix."V/sansSerif" = "serifless"
-selectorAffix.VScript = "motionSerifed"
+selectorAffix.VScript = "serifed"
 selectorAffix."cyrl/Izhitsa" = "serifed"
 
 
@@ -4832,7 +4832,7 @@ rank = 3
 descriptionAffix = "serifs"
 selectorAffix.v = "serifed"
 selectorAffix."v/sansSerif" = "serifless"
-selectorAffix.vScript = "motionSerifed"
+selectorAffix.vScript = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
 selectorAffix.vHookRight = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
 selectorAffix.vLoop = {if = [{body = "cursive"}], then = "serifless", else = "serifed"}
 selectorAffix."cyrl/izhitsa" = {if = [{body = "cursive"}], then = "motionSerifed", else = "serifed"}
