Cleanup composite characters surrounding `cyrl/i`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -4555,7 +4555,7 @@ selectorAffix."turnm/reduced" = "toothed"
 selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
-selectorAffix."cyrl/i.italic/descBase" = "toothed"
+selectorAffix."cyrl/i.italic/descBase" = "descBase"
 selectorAffix."cyrl/sha.italic/full" = "toothed"
 selectorAffix."cyrl/sha.italic/reduced" = "toothed"
 selectorAffix."cyrl/shcha.italic/full" = "toothed"
@@ -4582,7 +4582,7 @@ selectorAffix."turnm/reduced" = "tailed"
 selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "tailed"
-selectorAffix."cyrl/i.italic/descBase" = "toothed"
+selectorAffix."cyrl/i.italic/descBase" = "descBase"
 selectorAffix."cyrl/sha.italic/full" = "tailed"
 selectorAffix."cyrl/sha.italic/reduced" = "tailed"
 selectorAffix."cyrl/shcha.italic/full" = "toothed"
@@ -4609,7 +4609,7 @@ selectorAffix."turnm/reduced" = "toothlessCorner"
 selectorAffix."turnmLeg/full" = "toothlessCorner"
 selectorAffix."turnmLeg/reduced" = "toothlessCorner"
 selectorAffix."cyrl/i.italic" = "toothed"
-selectorAffix."cyrl/i.italic/descBase" = "toothed"
+selectorAffix."cyrl/i.italic/descBase" = "descBase"
 selectorAffix."cyrl/sha.italic/full" = "toothed"
 selectorAffix."cyrl/sha.italic/reduced" = "toothed"
 selectorAffix."cyrl/shcha.italic/full" = "toothed"
@@ -4636,7 +4636,7 @@ selectorAffix."turnm/reduced" = "toothlessRounded"
 selectorAffix."turnmLeg/full" = "toothed"
 selectorAffix."turnmLeg/reduced" = "toothed"
 selectorAffix."cyrl/i.italic" = "toothed"
-selectorAffix."cyrl/i.italic/descBase" = "toothed"
+selectorAffix."cyrl/i.italic/descBase" = "descBase"
 selectorAffix."cyrl/sha.italic/full" = "toothed"
 selectorAffix."cyrl/sha.italic/reduced" = "toothed"
 selectorAffix."cyrl/shcha.italic/full" = "toothed"
