--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "name": "@iosevka/monorepo",
   "version": "33.3.4",
-  "workspaces": [
-    "packages/*",
-    "tools/*"
-  ],
+  "workspaces": ["packages/*", "tools/*"],
   "scripts": {
     "build": "verda -f verdafile.mjs",
     "bump-ver": "node tools/misc/src/update-package-json-version.mjs && npm install && node tools/misc/src/generate-ttfa-ranges.mjs",
@@ -17,13 +14,13 @@
     "@iarna/toml": "^2.2.5",
     "deep-equal": "^2.2.3",
     "otb-ttc-bundle": "^1.7.6",
-    "semver": "^7.7.2",
+    "semver": "^7.7.3",
     "uuid": "^13.0.0",
     "verda": "^1.12.3",
-    "which": "^5.0.0"
+    "which": "^6.0.0"
   },
   "devDependencies": {
-    "eslint": "^9.37.0",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-import": "^2.32.0",
